--- a/style.css
+++ b/style.css
@@ -15,15 +15,29 @@
   align-items: center;
 }
 
+.twoColumns {
+  display: flex;
+  flex-direction: row;
+}
+
+.columnOne {
+  display: flex;
+  flex-direction: column;
+  padding-right: 10px;
+}
+
+.columnTwo {
+}
+
 .label {
   font-family: Arial, Helvetica, sans-serif;
   letter-spacing: 5px;
-  margin: 0 auto;
+  margin: 0 auto 0 0;
   max-width: 800px;
-  padding: 20px;
+  padding-top: 5px;
+  padding-bottom: 5px;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-direction: row-reverse;
 }
 
 button {
@@ -111,6 +125,11 @@ button {
   color: white;
   font-family: Arial, Helvetica, sans-serif;
   letter-spacing: normal;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  margin-left: -200px;
+  z-index: 2;
 }
 
 .hidden {
