--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
-@font-face {
-  font-family: pokemon;
-  src: url(PokeSolid.ttf);
+@layer base {
+  @font-face {
+    font-family: pokemon;
+    src: url(/PokeSolid.ttf);
+  }
 }
 
 .container {
@@ -15,15 +17,11 @@
   align-items: center;
 }
 
-.twoColumns {
-  display: flex;
-  flex-direction: row;
-}
-
 .columnOne {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   padding-right: 10px;
+  /* display: none; */
 }
 
 .columnTwo {
@@ -40,14 +38,6 @@
   flex-direction: row-reverse;
 }
 
-button {
-  font-style: bold;
-}
-
-.checkbox {
-  margin-right: 210px;
-}
-
 header {
   display: flex;
   flex-direction: column;
@@ -58,9 +48,9 @@ header {
 
 #game {
   display: grid;
-  grid-template-columns: repeat(4, 120px);
-  grid-template-rows: repeat(4, 120px);
-  grid-gap: 10px;
+  grid-template-columns: repeat(4, 90px);
+  grid-template-rows: repeat(4, 90px);
+  grid-gap: 3px;
 }
 
 .card {
@@ -69,6 +59,8 @@ header {
   position: relative;
   overflow: hidden;
   transform-style: preserve-3d;
+  width: 90px;
+  height: 90px;
 }
 
 .front,
@@ -97,16 +89,6 @@ header {
   transform: rotateY(180deg);
 }
 
-button {
-  font-size: 18px;
-  background-color: #c62828;
-  color: white;
-  border-radius: 5px;
-  border: none;
-  padding: 10px 20px;
-  cursor: pointer;
-}
-
 .flex {
   display: flex;
 }
@@ -118,8 +100,6 @@ button {
     0 0 10px #3758aa, 0 0 10px #3758aa, 0 0 10px #3758aa;
   padding: 0px;
   margin: 0px;
-  /* text-shadow: 5px 0 #3758aa, -5px 0 #3758aa, 0 5px #3758aa, 0 -5px #3758aa,
-    3px 3px #3758aa, -3px -3px #3758aa, 3px -3px #3758aa, -3px 3px #3758aa; */
 }
 
 .alert {
@@ -138,4 +118,115 @@ button {
 
 .hidden {
   display: none;
+}
+
+@media (width <= 1250px) {
+  .columnTwo {
+    /* Grid size 90px? */
+  }
+}
+
+@media (width >= 1250px) {
+  .columnTwo {
+    /* Grid size 120px? */
+  }
+}
+
+/* Dropdown */
+body {
+  text-align: center;
+  font: 16px/1.5 sans-serif;
+  padding-top: 40px;
+  background-color: #eceff1;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+  font-size: 16px;
+  color: #fff;
+}
+
+/**
+  Hide the checkbox itself. Checking and unchecking 
+  it we will be done via the label element.
+*/
+
+input[type="checkbox"] {
+  display: none;
+}
+
+/* Click to expand button */
+
+label {
+  box-sizing: border-box;
+  display: inline-block;
+  width: 100%;
+  background-color: #57a0d4;
+  padding: 15px 20px;
+
+  cursor: pointer;
+  text-align: center;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
+
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+/*  The ul will have display:none by default */
+
+ul {
+  position: absolute;
+  list-style: none;
+  text-align: left;
+  width: 100%;
+  z-index: 1;
+  margin: 0;
+  padding: 0;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.2);
+
+  display: none;
+}
+
+ul li {
+  padding: 15px;
+  background-color: #fff;
+  color: #4fb9a7;
+  margin-bottom: 1px;
+  cursor: pointer;
+}
+
+ul li:hover {
+  background-color: #4fb9a7;
+  color: #fff;
+}
+
+ul li a {
+  color: inherit;
+  text-decoration: none;
+}
+
+/**
+
+  By using the Following-sibling selector (~),
+  we can target elements positioned after our checkbox in the DOM tree.
+
+  With the state pseudo selector (:checked),
+  we can make changes depending on the state of the checkbox.
+
+  Using this combination of selectors
+  allows to change the color of the label
+  and show the list of items
+  only when the checkbox is checked.
+
+*/
+
+input[type="checkbox"]:checked ~ label {
+  background-color: #3d88bd;
+}
+
+input[type="checkbox"]:checked ~ ul {
+  display: block;
 }
